fixing alignment problem on mainbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -50,7 +50,7 @@ a {
 
 .banner-background {
 	margin: 0 auto;
-	margin-top: 39px;
+	margin-top: 50px;
 	width: 760px;
 	height: auto;
 	background: url(../resources/hero.png) no-repeat center center;
